@@ -73,7 +73,7 @@ public class MutablePerfectHashMap<K, V> implements Map<K, V> {
 	// Rebuilt on every structural mutation. SimplePerfectHash#indexOf returns the position in the List passed to
 	// make(),
 	// which by construction equals the index of the key in keyList — hence the index into `valuesArr`.
-	private IHasIndexOf<K> hash = SimplePerfectHash.<K>make(List.of());
+	private IHasIndexOf<K> hash = SimplePerfectHash.<K>make(ImmutableList.of());
 
 	/**
 	 * Creates an empty mutable map.
@@ -172,7 +172,7 @@ public class MutablePerfectHashMap<K, V> implements Map<K, V> {
 	public void clear() {
 		keyList.clear();
 		valuesArr = EMPTY;
-		hash = SimplePerfectHash.<K>make(List.of());
+		hash = SimplePerfectHash.<K>make(ImmutableList.of());
 	}
 
 	@Override
